working on mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -200,3 +200,41 @@ body {
 		align-items: center;
 	}
 }
+
+@media (max-width: 500px){
+
+	nav {
+		display: flex;
+		flex-direction: column-reverse;
+		align-items: center;
+		position: static;
+		margin-left: 10%;
+	}
+
+	.divlinks {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+		align-content: center;
+	}
+
+	.divlinks a {
+		border-bottom: 1px solid grey;
+		width: 100%;
+	}
+	
+	.topsection {
+		margin-top: -100px;
+		margin-left: -20%;
+	}
+
+	.top-content {
+		flex-direction: column;
+	}
+	
+	.bottom-content {
+		flex-direction: column;
+	}
+
+}
