--- a/css/index.css
+++ b/css/index.css
@@ -190,6 +190,11 @@ body {
 }
 
 @media (max-width: 800px){
+
+	body {
+		max-width: 100%;
+	}
+
 	.headerImage {
 		display: none;
 	}
@@ -198,17 +203,31 @@ body {
 		display: flex;
 		flex-direction: column-reverse;
 		align-items: center;
+		justify-content: center;
+	}
+
+	.topsection {
+		justify-content: center;
+		width: 85%;
+	}
+
+	button {
+		margin-left: -52%;
 	}
 }
 
 @media (max-width: 500px){
+	body {
+		width: 90%;
+	}
 
 	nav {
 		display: flex;
 		flex-direction: column-reverse;
 		align-items: center;
 		position: static;
-		margin-left: 10%;
+		width: 100%;
+		
 	}
 
 	.divlinks {
@@ -216,7 +235,6 @@ body {
 		flex-direction: column;
 		align-items: center;
 		width: 100%;
-		align-content: center;
 	}
 
 	.divlinks a {
@@ -226,7 +244,6 @@ body {
 	
 	.topsection {
 		margin-top: -100px;
-		margin-left: -20%;
 	}
 
 	.top-content {
@@ -238,7 +255,7 @@ body {
 	}
 
 	button {
-		margin-left: -55%;
+		margin-left: -52%;
 	}
 
 }
