--- a/css/index.css
+++ b/css/index.css
@@ -139,9 +139,11 @@ header {
 	justify-content: space-between;
 }
 .middle-img {
-	width: 100%;
-	box-align: center; 
+	display: flex;
+	justify-content: center;
+	width: 132.5%;
 	padding-top: 20px;
+	margin-left: -20%;
 }
 body {
 	width: 80%;
@@ -273,4 +275,8 @@ body {
 		margin-left: -52%;
 	}
 
+	.middle-img {
+		width: 100%;
+		margin-left: 0%;
+	}
 }
